<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_to_do_list"
            android:title="@string/to_do_list"
            />

        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/menu_stats"
            android:title="@string/estat_sticas"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/menu_settings"
            android:title="@string/defini_es"/>

        <item
            android:id="@+id/nav_goals"
            android:icon="@drawable/menu_goals"
            android:title="@string/objetivos"/>

        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/acera"/>


    </group>

    <group
        android:checkableBehavior="single">
        <item

            android:title="">
            <menu>

                <item
                    android:id="@+id/nav_exit"
                    android:icon="@drawable/menu_exit"
                    android:title="@string/encerrar_sec_o"/>

            </menu>
        </item>
    </group>

</menu>